# luyan

./: .gitignore  temp_chat.json  temp_chat_resp.json  temp_chat_resp2.json
CharacterSeed/: .coverage  .env.example  .gitignore  CHANGELOG_DIFF.md  README.md  activate_env.bat  chat_3.json  chat_4.json  chat_5.json  jiwen.json  main.py  pyproject.toml  requirements.txt  sess.json  start_demo.bat  start_demo.ps1  temp_chat.json  temp_chat2.json  temp_chat3.json  temp_chat4.json  temp_chat5.json  temp_creation.json  temp_delta.json  temp_qwen_test.json  temp_qwen_turbo_test.json  temp_tick.json  test_masked_key.py  test_routing.py
CharacterSeed/backend/: config.py  database.py  main.py  models.py  schemas.py  state.py  test_temp_creationpipeline.py
CharacterSeed/doc/: API参考文档.md  avatar_generation_plan.md  chat_pipeline_fix_plan.md  steps_13_15_实现总结.md
CharacterSeed/docs/: 2026-06-27-character-tooltip-detail.md  2026-06-28-jiwen-integration-summary.md  architecture.md  demo-script.md  pitch-brief.md  pitch-deck-outline.md  pitch-deck-public.pptx  pitch-deck.pptx  recording-script.md  status_page_fix_plan.md  world_panel_plan.md  模型调用表.md
CharacterSeed/outputs/: create_flow_fix_plan.md
CharacterSeed/tests/: README.md  conftest.py  qa_connectivity.ps1  run_tests.py  test_character_memory_router.py  test_character_router.py  test_chat_router.py  test_chat_session_crud.py  test_context_manager.py  test_creation.py  test_day1_event_persistence.py  test_day4.py  test_day4_event_system.py  test_day5_creation_growth_handoff.py  test_db_migration.py  test_event_pipeline.py  (+31 more)
(+234 files in other folders)
