[project]
name = "characterseed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiofiles==23.2.1",
    "fastapi==0.104.1",
    "httpx<0.28.0",
    "openai>=1.30.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pytest>=9.0.3",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
    "uvicorn==0.24.0",
]
